# open-chroma-index

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: pr.yml  release-cli.yml  release-core.yml
cli/: Cargo.toml  README.md
cli/src/: commands.rs  config.rs  main.rs  output.rs  server.rs
docs/: README.md  algorithm.md  cli.md  color-math.md  configuration.md  export-support.md  id-format.md  limitations.md  local-api.md  registry.md  rust-api.md  swatch-templates.md
examples/: from_hex.rs  inspect_id.rs
registry/v1/: checksums.json  families.json  metadata.json  schema.json  test-vectors.json
spec/: cli-configuration.md  color-spaces.md  id-format.md  oci-v1-draft.md  registry-data.md  support-matrix.md
src/: color.rs  convert.rs  error.rs  export.rs  gamut.rs  id.rs  index.rs  lib.rs  registry.rs
tools/generate-registry/: Cargo.toml
tools/generate-registry/src/: main.rs
