[package]
name = "oci-cli"
version = "0.3.3"
edition = "2024"
license = "Apache-2.0"
description = "Command-line client for Open Chroma Index."
readme = "README.md"
repository = "https://github.com/T-1234567890/open-chroma-index"
documentation = "https://github.com/T-1234567890/open-chroma-index/tree/main/docs"
keywords = ["color", "oklch", "cli", "design", "graphics"]
categories = ["command-line-utilities"]

[[bin]]
name = "oci"
path = "src/main.rs"

[dependencies]
oci_core = { package = "open-chroma-index", path = "..", version = "0.2.3" }
tiny_http = "0.12"
